--- a/Thesis.tex
+++ b/Thesis.tex
@@ -52,12 +52,10 @@
 % Bibliography
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage{natbib}
+\usepackage[sort]{natbib}
 \setcitestyle{%
     authoryear,%
-    sort,
-    square,
-    semicolon,%
+    open={[},close={]},citesep={;},%
     aysep={},yysep={,},%
     notesep={, }}
 
