--- a/Thesis.tex
+++ b/Thesis.tex
@@ -276,6 +276,7 @@ diploma or other qualifications.
 \tableofcontents
 \listoffigures
 \listoftables
+\listoftheorems[ignoreall, show={theorem,lemma}]
 
 %%---------------------%%
 \mainmatter
