--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1509,3 +1509,12 @@ booktitle = {Archiv. Math. Logik}
 	title = {1ML {\textendash} core and modules united (F-ing first-class modules)},
 	booktitle = {International Conference on Functional Programming (ICFP)}
 }
+
+
+@techreport{xuanbiesop,
+  title={Distributive Disjoint Polymorphism for Compositional Programming},
+  author =	{Bi, Xuan and Xie, Ningning and Oliveira, Bruno C. d. S. and Schrijvers, Tom},
+  year={2019},
+  url = {https://bixuanzju.github.io/files/ESOP2019.pdf},
+  institution={The University of Hong Kong}
+}
