--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -48,6 +48,9 @@
 \newcommand\tnamee{$\mathsf{F}_{co}$\xspace}
 \newcommand\sedel{$\mathsf{SEDEL}$\xspace}
 \newcommand\visitor{\textsc{Visitor}s\xspace}
+\newcommand\fsub{$\mathsf{F}_{<:}$\xspace}
+\newcommand\dname{$\lambda_{,,}$\xspace}
+\newcommand\lname{$\lambda_{\land}^{\lor}$\xspace}
 
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
