--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -23,7 +23,7 @@ increasing expressiveness:
 \item \sedel---an object-oriented language design---building on \fnamee,
   supports, among others, typed first traits. Through a case study, we have
   shown the usefulness of \fnamee in building highly reusable software
-  components using a improved form of Object Algebras. The case study
+  components using a improved form of object algebras. The case study
   demonstrates that the state-of-art encodings of extensible designs are greatly
   improved by \fnamee.
 \end{itemize}
