--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -1,3 +1,11 @@
+
+
+\renewcommand\ottaltinferrule[4]{
+  \inferrule*[narrower=0.9,lab=#1,#2]
+    {#3}
+    {#4}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{First-Class Traits}
 \label{chap:traits}
