--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1518,3 +1518,58 @@ booktitle = {Archiv. Math. Logik}
   url = {https://bixuanzju.github.io/files/ESOP2019.pdf},
   institution={The University of Hong Kong}
 }
+
+@article{pierce1994bounded,
+  title={Bounded quantification is undecidable},
+  author={Pierce, Benjamin C},
+  journal={Information and Computation},
+  volume={112},
+  number={1},
+  pages={131--165},
+  year={1994}
+}
+
+@inproceedings{DBLP:conf/icfp/GibbonsW14,
+  author    = {Jeremy Gibbons and
+               Nicolas Wu},
+  title     = {Folding domain-specific languages: deep and shallow embeddings (functional Pearl)},
+  booktitle = {{ICFP}},
+  pages     = {339--347},
+  publisher = {{ACM}},
+  year      = {2014}
+}
+
+
+@incollection{kiselyov2012typed,
+  title={Typed tagless final interpreters},
+  author={Kiselyov, Oleg},
+  booktitle={Generic and Indexed Programming},
+  pages={130--174},
+  year={2012},
+  publisher={Springer}
+}
+
+@inproceedings{hinze2004algebra,
+  title={An algebra of scans},
+  author={Hinze, Ralf},
+  booktitle={International Conference on Mathematics of Program Construction},
+  pages={186--210},
+  year={2004}
+}
+
+@article{fokkinga1989tupling,
+  title={Tupling and mutumorphisms},
+  author={Fokkinga, Maarten M},
+  journal={Squiggolist},
+  volume={1},
+  number={4},
+  year={1989}
+}
+
+@inproceedings{brent1980chip,
+  title={The chip complexity of binary arithmetic},
+  author={Brent, Richard P and Kung, Hsiang-Tsung},
+  booktitle={Proceedings of the twelfth annual ACM symposium on Theory of computing},
+  pages={190--200},
+  year={1980},
+}
