--- a/packages.tex
+++ b/packages.tex
@@ -26,6 +26,9 @@
 % \usepackage[euler-digits,euler-hat-accent]{eulervm}
 
 \usepackage{pifont}
+\usepackage{textgreek}
+
+
 
 \usepackage{savesym}
 \savesymbol{checkmark}
@@ -63,7 +66,7 @@
 }
 
 \lstdefinelanguage{sedel}{
-  keywords={self, Void, Class, All, extends, this, trait, inherits, super, type, Trait, override, new, if, then, else, let, in, letrec},
+  keywords={main, Int, String, Bool, self, Void, Class, All, extends, this, trait, inherits, super, type, Trait, override, new, if, then, else, let, in, letrec},
   identifierstyle=\color{black},
   morecomment=[l]{--},
   morecomment=[l]{//},
