--- a/Sources/Polymorphism.tex
+++ b/Sources/Polymorphism.tex
@@ -4,17 +4,39 @@
 \label{chap:fi}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-In this chapter, we are going to enrich \namee with parametric polymorphism. As
-we will see in later chapters, the combination is very expressive, able to express sophisticated
-concepts such as mixins/traits and a highly modular form of \visitor~\citep{oliveira09modular, togersen:2004}. The
-combination is also highly challenging in that coherence becomes even harder to
-prove than in the simply typed setting. We present \fnamee, the first typed
-calculus combining disjoint polymorphism with BCD subtyping. \fnamee is a
-variant of \citeauthor{leivant1991finitely}'s predicative System
-F~\citep{leivant1991finitely}. The choice of predicativity is due to the
-simplicity of the coherence proof. We will further discuss this in
-\cref{chap:coherence:poly}. \fnamee serves as the theoretical foundation of
-typed first-class traits, which will be introduced in \cref{chap:traits}.
+In this chapter, we present \fnamee, the first typed calculus combining disjoint
+polymorphism with BCD subtyping. \fnamee is essentially a hybrid of \namee
+(which does not support parametric polymorphism) and \fname (which does not
+account for BCD subtyping). As we will see, the combination is very expressive,
+enabling improved compositional designs and supporting automated composition of
+interpretations in programming techniques like object
+algebras~\citep{oliveira2012extensibility} and finally
+tagless~\citep{CARETTE_2009}. Furthermore, as we will show in
+\cref{chap:traits}, \fnamee is able to encode sophisticated concepts such as
+mixins/traits and dynamic inheritance. Unfortunately, the combination also
+introduces non-trivial complications. The main technical challenge (like for
+most other calculi with disjoint intersection types) is the proof of
+coherence---our main topic in \cref{chap:coherence:poly}.
+
+
+The formalization and metatheory of \fnamee are a significant advance over its
+predecessor \fname. Besides the support for distributive subtyping, \fnamee
+removes several restrictions imposed by the syntactic coherence proof in \fname.
+In particular \fnamee supports unrestricted intersections, which are forbidden
+in \fname. Unrestricted intersections enable, for example, encoding certain
+forms of bounded quantification~\citep{pierce1991programming}. Moreover the new
+proof method is more robust with respect to language extensions. For instance,
+\fnamee supports the bottom type without significant complications in the
+proofs, while it was a challenging open problem in \fname. A final interesting
+aspect is that \fnamee's type-checking is decidable. In the design space of
+languages with polymorphism and subtyping, similar mechanisms have been known to
+lead to undecidability. Pierce's seminal paper ``\emph{Bounded quantification is
+  undecidable}''~\citep{pierce1994bounded} shows that the contravariant subtyping
+rule for bounded quantification in \fsub leads to undecidability of subtyping.
+In \fnamee the contravariant rule for disjoint quantification retains
+decidability. Since with unrestricted intersections \fnamee can express several
+use cases of bounded quantification, \fnamee could be an interesting and
+decidable alternative to \fsub.
 
 
 \input{Gen/Poly/overview.tex}
@@ -26,5 +48,5 @@ typed first-class traits, which will be introduced in \cref{chap:traits}.
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../Thesis"
-%%% org-ref-default-bibliography: ../Thesis.bib
+%%% org-ref-default-bibliography: "../Thesis.bib"
 %%% End:
