--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1573,3 +1573,36 @@ booktitle = {Archiv. Math. Logik}
   pages={190--200},
   year={1980},
 }
+
+@inproceedings{muehlboeck2018empowering,
+  title={Empowering union and intersection types with integrated subtyping},
+  author={Muehlboeck, Fabian and Tate, Ross},
+  booktitle={OOPSLA},
+  year={2018}
+}
+
+@MastersThesis{lasselambda,
+  author =       {Blaauwbroek,Lasse},
+  title =        {On the Interaction Between Unrestricted Union and Intersection Types and Computational Effects},
+  school =       {Technical University Eindhoven},
+  year =         {2017}
+}
+
+@article{Castagna_2017,
+	year = 2017,
+	month = {aug},
+	publisher = {Association for Computing Machinery ({ACM})},
+	volume = {1},
+	number = {{ICFP}},
+	pages = {1--28},
+	author = {Giuseppe Castagna and Victor Lanvin},
+	title = {Gradual typing with union and intersection types},
+	journal = {Proceedings of the {ACM} on Programming Languages}
+}
+
+@inproceedings{morrisrow,
+  title={Abstracting Extensible Data Types},
+  author={Morris, J. Garrett and McKinna, James},
+  booktitle={Principles of Programming Languages (POPL)},
+  year={2019}
+}
